RESOLVED FIXED101177
Robohornet SVG benchmark spends too much time in unnecessary repaint checks.
https://bugs.webkit.org/show_bug.cgi?id=101177
Summary Robohornet SVG benchmark spends too much time in unnecessary repaint checks.
Philip Rogers
Reported 2012-11-04 21:04:51 PST
The repaint box calculations are multiplying the local repaint bounding box quad through 5 matrices on every update of the benchmark (for each of hundreds of shapes). Only local bounding boxes are stored in our SVG implementation but we should be able to cache some of this. Patch forthcoming!
Attachments
First pass (12.04 KB, patch)
2012-11-06 17:27 PST, Philip Rogers
eric: review+
Patch for landing (12.05 KB, patch)
2012-11-07 10:37 PST, Philip Rogers
pdr: commit-queue+
Path for landing (2) (10.41 KB, patch)
2012-11-07 10:42 PST, Philip Rogers
no flags
Dirk Schulze
Comment 1 2012-11-05 06:02:44 PST
Link please.
Philip Rogers
Comment 2 2012-11-05 09:58:34 PST
Philip Rogers
Comment 3 2012-11-06 17:27:11 PST
Created attachment 172681 [details] First pass
WebKit Review Bot
Comment 4 2012-11-06 17:30:17 PST
Attachment 172681 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/platform/qt/TestExpectations:2394: Path does not exist. [test/expectations] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 5 2012-11-06 17:48:51 PST
Comment on attachment 172681 [details] First pass SGTM!
Philip Rogers
Comment 6 2012-11-07 10:37:45 PST
Created attachment 172834 [details] Patch for landing
WebKit Review Bot
Comment 7 2012-11-07 10:40:25 PST
Attachment 172834 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/plat..." exit_code: 1 LayoutTests/platform/qt/TestExpectations:2394: Path does not exist. [test/expectations] [5] Total errors found: 1 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Philip Rogers
Comment 8 2012-11-07 10:42:46 PST
Created attachment 172835 [details] Path for landing (2)
WebKit Review Bot
Comment 9 2012-11-07 11:27:25 PST
Comment on attachment 172835 [details] Path for landing (2) Clearing flags on attachment: 172835 Committed r133786: <http://trac.webkit.org/changeset/133786>
WebKit Review Bot
Comment 10 2012-11-07 11:27:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.