Source/WebCore/rendering/svg/SVGRenderSupport.cpp
@@ -106,6 +106,16 @@ const RenderObject* SVGRenderSupport::pushMappingToContainer(const RenderObject*
     return parent;
 }
 
+bool SVGRenderSupport::checkForSVGRepaintDuringLayout(RenderObject* object)
+{
+    if (!object->checkForRepaintDuringLayout())
+        return false;
+    // When a parent container is transformed in SVG, all children will be painted automatically
+    // so we are able to skip redundant repaint checks.
+    RenderObject* parent = object->parent();
+    return !(parent && parent->isSVGContainer() && toRenderSVGContainer(parent)->didTransformToRootUpdate());
+}
+
 // Update a bounding box taking into account the validity of the other bounding box.
 static inline void updateObjectBoundingBox(FloatRect& objectBoundingBox, bool& objectBoundingBoxValid, RenderObject* other, FloatRect otherBoundingBox)
 {
